--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./css/style.min.css">
   <title>Gabriel Henrik - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Front Ende e UX/UI Designer, Localizado em São Paulo">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
