--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <title>Gabriel Henrik - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Front Ende e UX/UI Designer, Localizado em São Paulo">
   <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
