--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Gabriel Henrik - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Front Ende e UX/UI Designer, Localizado em São Paulo">
   <link rel="icon" href="./favicon.svg" type="image/svg+xml">
@@ -15,18 +15,21 @@
 
 <body>
 
-  <header class="header"><img src="./img/marca.svg" alt="Lobo" width="104" height="38">
-    <nav>
-      <ul class="header-menu">
-        <li><a href="#experiencia">Experiência</a></li>
-        <li><a href="#formacao">Formação</a></li>
-        <li><a href="#contato">Contato</a></li>
-      </ul>
-    </nav>
+  <header class="header">
+    <div class="header-container">
+      <img src="./img/logo-gh.svg" alt="Marca Gabriel Henrik colchetes" width="260" height="40">
+      <nav>
+        <ul class="header-menu">
+          <li><a href="#projetos">Projetos</a></li>
+          <li><a href="#formacao">Formação</a></li>
+          <li><a href="#contato">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main class="introducao">
-    <img src="./img/perfil.jpg" alt="lobo cinza" width="360" height="520">
+    <img src="./img/perfil.png" alt="lobo cinza" width="360" height="520">
     <div>
       <h1>Desenvolvedor <br> Front End & <br> UX/UI Designer</h1>
       <p>Localizado em São Paulo</p>
@@ -34,10 +37,10 @@
 
   </main>
 
-  <section class="experiencia" id="experiencia" aria-label="Experiência">
-    <h2 class="subtitulo">Experiência</h2>
+  <section class="projetos" id="projetos" aria-label="projetos">
+    <h2 class="subtitulo">projetos</h2>
     <div>
-      <p class="experiencia-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
+      <p class="projetos-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
 
       <div class="empresa">
         <span class="empresa-ano">2045</span>
@@ -91,20 +94,20 @@
         <ul class="faculdade-lista">
           <li class="faculdade">
             <span class="faculdade-tipo">Bacharel</span>
-            <h3 class="faculdade-curso">Administração de Empresas</h3>
-            <span class="faculdade-instituicao">UFRJ</span>
+            <h3 class="faculdade-curso">Ciência da computação</h3>
+            <span class="faculdade-instituicao">UFABC</span>
           </li>
 
           <li class="faculdade">
-            <span class="faculdade-tipo">Técnologo</span>
-            <h3 class="faculdade-curso">Design Digital</h3>
-            <span class="faculdade-instituicao">Infnet</span>
+            <span class="faculdade-tipo">Bacharel</span>
+            <h3 class="faculdade-curso">Bacharelado em Ciência e Tecnologia</h3>
+            <span class="faculdade-instituicao">UFABC</span>
           </li>
 
           <li class="faculdade">
-            <span class="faculdade-tipo">Mestre</span>
-            <h3 class="faculdade-curso">User Experience Design</h3>
-            <span class="faculdade-instituicao">UCLL</span>
+            <span class="faculdade-tipo">Curso Técnico</span>
+            <h3 class="faculdade-curso">Desenvolvimento Web</h3>
+            <span class="faculdade-instituicao">ETEC MCM</span>
           </li>
         </ul>
         <div class="formacao-extra">
@@ -119,8 +122,7 @@
           <div class="idiomas">
             <h3>Idiomas</h3>
             <ul>
-              <li>Inglês <span>/ Fluente</span></li>
-              <li>Espanhol <span>/ Intermediário</span></li>
+              <li>Inglês <span>/ Intermediário</span></li>
             </ul>
           </div>
         </div>
@@ -132,9 +134,9 @@
     <div class="footer-container">
       <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa 👋</p>
       <ul class="footer-contato">
-        <li>lobo@gmail.com</li>
-        <li>+55 11 9999-9999</li>
-        <li><a href="/">@instagram</a></li>
+        <li>gabrielhenrik.nunes@gmail.com</li>
+        <li>+55 11 94561-5570</li>
+        <li><a href="https://www.instagram.com/bielzebub.exe/ " target=”_blank”>@bielzebub.exe</a></li>
       </ul>
       <p class="footer-copy">Gabriel Henrik. Alguns direitos reservados.</p>
     </div>
