--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.min.css">
   <title>Gabriel Henrik - Desenvolvedor e Designer</title>
-  <meta name="description" content="Desenvolvedor Front Ende e UX/UI Designer, Localizado em São Paulo">
+  <meta name="description" content="Desenvolvedor Front End e UX/UI Designer, Localizado em São Paulo">
   <link rel="icon" href="./favicon.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
