--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Gabriel Henrik - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer, Localizado em São Paulo">
   <link rel="icon" href="./favicon-pp.svg" type="image/svg+xml">
