corração css min

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.min.css">
   <title>Gabriel Henrik - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer, Localizado em São Paulo">
   <link rel="icon" href="./favicon-pp.svg" type="image/svg+xml">
@@ -29,7 +29,7 @@
   </header>
 
   <main class="introducao">
-    <img src="./img/perfil.png" alt="lobo cinza" width="360" height="520">
+    <img src="./img/perfil.png" alt="gabriel henrik" width="360" height="520">
     <div>
       <h1>Desenvolvedor <br> Front End & <br> UX/UI Designer</h1>
       <p>Localizado em São Paulo</p>
