--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <header class="header">
     <div class="header-container">
-      <img src="./img/logo-gh.svg" alt="Marca Gabriel Henrik colchetes" width="260" height="40">
+      <img src="./img/logo-gh.svg" alt="" width="260" height="40">
       <nav>
         <ul class="header-menu">
           <li><a href="#projetos">Projetos</a></li>
@@ -42,19 +42,21 @@
     <div>
       <p class="projetos-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
 
-      <div class="empresa">
-        <span class="empresa-ano">2045</span>
-        <h3 class="empresa-titulo">Bikcraft</h3>
-        <span class="empresa-titulo">Desenvolvedor Júnior</span>
-        <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript e UI do site durante o curso de HTML e CSS para iniciantes.</p>
-        <ul class="empresa-habilidades">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>UX Design</li>
-          <li>UI Design</li>
-        </ul>
-      </div>
+      <a href="./projetos/bikcraft/index.html" target="_blank">
+        <div class="empresa">
+          <span class="empresa-ano">2023</span>
+          <h3 class="empresa-titulo">Bikcraft</h3>
+          <span class="empresa-titulo">Desenvolvedor Júnior</span>
+          <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript e UI do site durante o curso de HTML e CSS para iniciantes.</p>
+          <ul class="empresa-habilidades">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>UX Design</li>
+            <li>UI Design</li>
+          </ul>
+        </div>
+      </a>
 
       <div class="empresa">
         <span class="empresa-ano">2022</span>
