--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.min.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Gabriel Henrik - Desenvolvedor e Designer</title>
   <meta name="description" content="Desenvolvedor Front End e UX/UI Designer, Localizado em São Paulo">
   <link rel="icon" href="./favicon-pp.svg" type="image/svg+xml">
@@ -42,22 +42,22 @@
     <div>
       <p class="projetos-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
 
-      <a href="./projetos/bikcraft/index.html" target="_blank">
-        <div class="empresa">
-          <span class="empresa-ano">2023</span>
-          <h3 class="empresa-titulo">Bikcraft</h3>
-          <span class="empresa-titulo">Desenvolvedor Júnior</span>
-          <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript e UI do site durante o curso de HTML e CSS para iniciantes.</p>
-          <ul class="empresa-habilidades">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>UX Design</li>
-            <li>UI Design</li>
+      <div class="empresa">
+        <h3 class="empresa-titulo">Bikcraft</h3>
+        <picture>
+          <img src="./img/thumbs/bikcraft-thumb.jpg" alt="">
+        </picture>
+
+        <div class="conteudo">
+          <p>Criei o projeto Bikcraft do zero, do wireframe à codificação, durante os cursos de UI Design e HTML & CSS na Origamid. O foco sempre foi garantir um site responsivo e acessível para todos!</p>
+          <ul>
+            <li><a href="./projetos/bikcraft/index.html" target="_blank">Acesse o projeto</a></li>
+            <li><a href="https://github.com/xBielzebub/bikcraft.git" target="_blank">Acesse o repositório</a></li>
           </ul>
         </div>
-      </a>
+      </div>
 
+      <!-- 
       <div class="empresa">
         <span class="empresa-ano">2022</span>
         <h3 class="empresa-titulo">Surfbot</h3>
@@ -81,7 +81,7 @@
           <li>UX Design</li>
           <li>UI Design</li>
         </ul>
-      </div>
+      </div> -->
 
     </div>
   </section>
