--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <section class="projetos" id="projetos" aria-label="projetos">
     <h2 class="subtitulo">projetos</h2>
     <div>
-      <p class="projetos-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Para aplicativos web como a rede social Dogs eu trabalhei no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
+      <p class="projetos-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. PTrabalho tanto no código quanto no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
 
       <div class="empresa">
         <h3 class="empresa-titulo">Bikcraft</h3>
@@ -56,32 +56,6 @@
           </ul>
         </div>
       </div>
-
-      <!-- 
-      <div class="empresa">
-        <span class="empresa-ano">2022</span>
-        <h3 class="empresa-titulo">Surfbot</h3>
-        <span class="empresa-titulo">Estágiario</span>
-        <p class="empresa-texto">No projeto Surfbot eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript e UI do site durante o curso de HTML e CSS para iniciantes.</p>
-        <ul class="empresa-habilidades">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-        </ul>
-      </div>
-
-      <div class="empresa">
-        <span class="empresa-ano">2045</span>
-        <h3 class="empresa-titulo">Brafé</h3>
-        <span class="empresa-titulo">Desenvolvedor Júnior</span>
-        <p class="empresa-texto">No projeto Bikcraft eu trabalhei no desenvolvimento completo do HTML, CSS e JavaScript e UI do site durante o curso de HTML e CSS para iniciantes.</p>
-        <ul class="empresa-habilidades">
-          <li>Email Market</li>
-          <li>HTML</li>
-          <li>UX Design</li>
-          <li>UI Design</li>
-        </ul>
-      </div> -->
 
     </div>
   </section>
@@ -124,7 +98,7 @@
           <div class="idiomas">
             <h3>Idiomas</h3>
             <ul>
-              <li>Inglês <span>/ Intermediário</span></li>
+              <li>Inglês <span>/ Avançado</span></li>
             </ul>
           </div>
         </div>
