--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <section class="projetos" id="projetos" aria-label="projetos">
     <h2 class="subtitulo">projetos</h2>
     <div>
-      <p class="projetos-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. PTrabalho tanto no código quanto no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
+      <p class="projetos-texto">Desenvolvo pequenos projetos como o Bikcraft utilizando <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Trabalho tanto no código quanto no <strong>UX</strong> e <strong>UI Design</strong> do projeto.</p>
 
       <div class="empresa">
         <h3 class="empresa-titulo">Bikcraft</h3>
