--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </picture>
 
         <div class="conteudo">
-          <p>Criei o projeto Bikcraft do zero, do wireframe à codificação, durante os cursos de UI Design e HTML & CSS na Origamid. O foco sempre foi garantir um site responsivo e acessível para todos!</p>
+          <p>Desenvolvi o projeto Bikcraft desde o wireframe até a codificação, durante os cursos de UI Design e HTML & CSS na Origamid. O foco sempre foi garantir um site responsivo e acessível para todos!</p>
           <ul>
             <li><a href="./projetos/bikcraft/index.html" target="_blank">Acesse o projeto</a></li>
             <li><a href="https://github.com/xBielzebub/bikcraft.git" target="_blank">Acesse o repositório</a></li>
