hover link dos projetos

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <img src="./img/thumbs/bikcraft-thumb.jpg" alt="">
         </picture>
 
-        <div class="conteudo">
+        <div class="conteudo-projetos">
           <p>Desenvolvi o projeto Bikcraft desde o wireframe até a codificação, durante os cursos de UI Design e HTML & CSS na Origamid. O foco sempre foi garantir um site responsivo e acessível para todos!</p>
           <ul>
             <li><a href="./projetos/bikcraft/index.html" target="_blank">Acesse o projeto</a></li>
