--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
 
   <main class="introducao">
-    <img src="./img/Perfil-port.png" alt="gabriel henrik" width="360" height="520">
+    <img src="./img/perfil-port.png" alt="gabriel henrik" width="360" height="520">
     <div>
       <h1>Desenvolvedor <br> Front End & <br> UX/UI Designer</h1>
       <p>Localizado em São Paulo</p>
