--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </ul>
       </div>
 
-      <p class="footer-copy font-2-m cor-6">Gabriel Henrik © Alguns direitos reservados.</p>
+      <p class="footer-copy">Gabriel Henrik © Alguns direitos reservados.</p>
     </div>
   </footer>
 </body>
