--- a/index.html
+++ b/index.html
@@ -81,19 +81,15 @@
     </div>
   </section>
 
-  <footer class="footer-bg" id="contato">
-    <div class="footer container">
-      <img src="./img/logonew-white.png" alt="" width="320">
-      <div class="footer-contato">
-        <h3>Contato</h3>
-        <ul>
-          <li><a href="tel:+5511945615570">+55 11 94561-5570</a></li>
-          <li><a href="mailto:gabrielhenrik.nunes@gmail.com">gabrielhenrik.nunes@gmail.com</a></li>
-          <li>Ribeirão Pires - SP</li>
-        </ul>
-      </div>
-
-      <p class="footer-copy">Gabriel Henrik © Alguns direitos reservados.</p>
+  <footer class="footer" id="contato">
+    <div class="footer-container">
+      <p class="footer-texto">Estou disponível para novos projetos no momento. Entre em contato comigo e marcamos uma conversa 👋</p>
+      <ul class="footer-contato">
+        <li>gabrielhenrik.nunes@gmail.com</li>
+        <li>+55 11 94561-5570</li>
+        <li><a href="https://www.instagram.com/bielzebub.exe/ " target=”_blank”>@bielzebub.exe</a></li>
+      </ul>
+      <p class="footer-copy">Gabriel Henrik. Alguns direitos reservados.</p>
     </div>
   </footer>
 </body>
