--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <ul class="social-links">
         <li><a href="https://github.com/xBielzebub" target="_blank"><img src="./img/github-icon.svg" alt=""></a></li>
         <li><a href="https://linkedin.com/in/gabrielhenrik294015150" target="_blank"><img src="./img/linkedin-icon.svg" alt=""></a></li>
-        <li><a href="" class="btn">Currículo</a></li>
+        <li><a href="./cv/CV - GABRIEL HENRIK - FRONT-END.pdf" class="btn" download>Currículo</a></li>
       </ul>
     </div>
   </main>
